index,js update

--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,117 @@
 html {
-  background-color: rgba(0, 136, 255, 0.484);
+  background-color: rgba(0, 84, 153, 0.594);
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+img {
+  display: block;
+  max-width: 100%;
+}
+ul {
+  margin: 0;
+}
+.is-hidden {
+  visibility: hidden;
+}
+.visible {
+  visibility: visible;
+}
+.section {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%;
+  margin: 0 auto;
+}
+/* ---- header ----  */
+.items {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.gallery {
+  margin: auto;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+.search-form {
+  height: 40px;
+  background-color: #000000;
+  margin: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+}
+.search-form input {
+  height: 30px;
+  width: 300px;
+  box-shadow: 1px 1px 1px rgba(0, 166, 255, 0.5);
+}
+.search-form button {
+  margin-left: 20px;
+  background-color: rgb(60, 136, 199);
+  height: 30px;
+  border-radius: 3px;
+}
+.load-more {
+  margin: 20px auto;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 30px;
+  background-color: black;
+  border-radius: 3px;
+  box-shadow: 2px 2px 2px;
+}
+.gallery__link img {
+  object-fit: cover;
+  width: 400px;
+  height: 340px;
+  border-radius: 5px;
+}
+.gallery__link {
+  width: 400px;
+  height: 400px;
+  flex-wrap: wrap;
+  gap: 10px;
+  display: flex;
+  text-decoration: none;
+  border-radius: 5px;
+
+  box-shadow: 2px 2px 2px #00000084;
+}
+.info {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+.info-item {
+  display: flex;
+  justify-content: center;
+  padding-left: 20px;
+  color: black;
 }
