--- a/src/main.css
+++ b/src/main.css
@@ -83,8 +83,8 @@ ul {
   width: 100px;
   height: 30px;
   background-color: black;
+  color: rgb(0, 200, 255);
   border-radius: 3px;
-  box-shadow: 2px 2px 2px;
 }
 .gallery__link img {
   object-fit: cover;
